--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     <script>
         // Constants
         const REWARD_AMOUNT = 3.00; // $3 reward per cycle
-        const MINING_DURATION = 20000; // 24 hours in milliseconds
+        const MINING_DURATION = 4 * 60 * 60 * 1000; // 24 hours in milliseconds
 
         // Load wallet data from localStorage
         let walletBalance = parseFloat(localStorage.getItem('walletBalance')) || 0;
