--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 </div>
                 <div class="circle-inner">
                     <div class="mining-amount" id="miningAmount">0.00</div>
-                    <div class="mining-text">USDT Mined/min</div>
+                    <div class="mining-text">USDT Mined in 24hrs</div>
                     <div class="mining-time" id="miningTime">Not mining</div>
                 </div>
             </div>
