--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
             <i class="fas fa-tasks"></i>
             <span>Tasks</span>
         </a>
-        <a href="#" class="nav-item">
+        <a href="about.html" class="nav-item">
             <i class="fas fa-info-circle"></i>
             <span>About</span>
         </a>
@@ -601,7 +601,7 @@
         // Constants
         const BASE_REWARD_AMOUNT = 3.00; // Base $3 reward per cycle
         const MINING_DURATION = 24 * 60 * 60 * 1000; // 24 hours in milliseconds
-        const MINING_POWER_INCREMENT = 0.12; // 0.12x increase per $50
+        const MINING_POWER_INCREMENT = 0.012; // 0.012x increase per $50
 
         // Load wallet data from localStorage
         let walletBalance = parseFloat(localStorage.getItem('walletBalance')) || 0;
