--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             <i class="fas fa-wallet"></i>
             <span>Wallet</span>
         </a>
-        <a href="#" class="nav-item">
+        <a href="task.html" class="nav-item">
             <i class="fas fa-tasks"></i>
             <span>Tasks</span>
         </a>
