--- a/wallet.html
+++ b/wallet.html
@@ -825,7 +825,7 @@
             <i class="fas fa-wallet"></i>
             <span>Wallet</span>
         </a>
-        <a href="tasks.html" class="nav-item">
+        <a href="task.html" class="nav-item">
             <i class="fas fa-tasks"></i>
             <span>Tasks</span>
         </a>
